--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
+.godot/
+.idea/
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
 
-# Mono-specific ignores
-.mono/
-data_*/
+*.import
