Commit unfinished work

--- a/Nightfall Resource Server/Nightfall Resource Server.csproj
+++ b/Nightfall Resource Server/Nightfall Resource Server.csproj
@@ -9,4 +9,8 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    </PropertyGroup>
+
 </Project>
