Huge refactoring. Change entry point to followe net5.0 style. Add logging to a file. Add ip based rate limiting. Use HTTPS only.

--- a/Nightfall Resource Server/Properties/launchSettings.json
+++ b/Nightfall Resource Server/Properties/launchSettings.json
@@ -4,9 +4,9 @@
     "Nightfall_Resource_Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "patch",
-      "applicationUrl": "http://localhost:5000",
+      "launchBrowser": false,
+      "launchUrl": "update",
+      "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
