--- a/Nightfall Resource Server/Nightfall Resource Server.csproj
+++ b/Nightfall Resource Server/Nightfall Resource Server.csproj
@@ -13,4 +13,10 @@
       <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AspNetCoreRateLimit" Version="4.0.2" />
+      <PackageReference Include="MySql.Data" Version="8.0.28" />
+      <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0-dev-00067" />
+    </ItemGroup>
+
 </Project>
