--- a/Nightfall Resource Server/appsettings.json
+++ b/Nightfall Resource Server/appsettings.json
@@ -5,5 +5,47 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": false,
+    "StackBlockedRequests": true,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [
+    ],
+    "EndpointWhitelist": [],
+    "ClientWhitelist": [],
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1s",
+        "Limit": 2
+      },
+      {
+        "Endpoint": "*",
+        "Period": "15m",
+        "Limit": 10
+      },
+      {
+        "Endpoint": "*",
+        "Period": "12h",
+        "Limit": 1000
+      }
+    ]
+  },
+  "IpRateLimitPolicies": {
+    "IpRules": []
+  },
+  "Database": {
+    "ConnectionString": "Server=localhost;Database=iTest;Trusted_Connection=True;"
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5001"
+      }
+    }
+  }
+
 }
